manifests/http-entry.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: http-entry
---
apiVersion: v1
kind: Service
metadata:
  name: http-entry
  namespace: http-entry
  labels:
    app.kubernetes.io/name: http-entry
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: http-entry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-entry
  namespace: http-entry
  labels:
    app.kubernetes.io/name: http-entry
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: http-entry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: http-entry
    spec:
      securityContext: {}
      containers:
        - name: nginx
          securityContext: {}
          image: "nginx:1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources: {}
          volumeMounts:
            - name: root-ca-cert
              readOnly: true
              mountPath: /usr/share/nginx/html/ca.pem
              subPath: ca.pem
            - mountPath: /usr/share/nginx/html/index.html
              name: nginx-config
              readOnly: true
              subPath: index.html
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: root-ca-cert
          secret:
            secretName: root-ca-cert
